api documentation with swagger and openapi UI - ph2
